--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,24 +1,22 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to the UNAVI Docs 
+description: Learn more about the UNAVI platform.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Learn more about the UNAVI platform.
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Get started
+      link: /overview/welcome/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Enter UNAVI
+      link: https://unavi.xyz
       icon: external
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
-
-## Next steps
 
 <CardGrid stagger>
 	<Card title="Update content" icon="pencil">
