update splash page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -19,16 +19,16 @@ hero:
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+  <Card title="Cross platform" icon="laptop">
+    UNAVI runs in the web, meaning any device that has a browser can instantly access UNAVI - mobile, desktop, or VR!
+  </Card>
+  <Card title="Open architecture" icon="puzzle">
+    Every layer is open for others to build on. Run your own servers, mod your client, and extend the protocol to add new features.
+  </Card>
+  <Card title="VRM avatars" icon="star">
+    Bring your own VRM avatar, or find one from the thousands of avatars others have created. 
+  </Card>
+  <Card title="Seamless world creation" icon="pencil">
+    Edit your worlds live with other people - add in new models and move objects around on the fly, no more waiting for an annoying upload process!
+  </Card>
 </CardGrid>
