--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: Learn more about the UNAVI platform.
   image:
-    file: ../../assets/Logo-Light.png
+    file: ../../assets/block-logo.png
   actions:
     - text: Get started
       link: /overview/welcome/
