--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -16,20 +16,23 @@ hero:
       icon: external
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid stagger>
   <Card title="Open architecture" icon="puzzle">
-    Every layer is open for others to build on. Run your own servers, mod your client, and extend the protocol to add new features.
+    Every layer is open for others to build on. Run your own servers, mod your
+    client, and extend the protocol to add new features.
   </Card>
   <Card title="VRM avatars" icon="star">
-    Bring your own VRM avatar, or find one from the thousands others have created. 
+    Bring your own VRM avatar, or find one from the thousands others have
+    created.
   </Card>
   <Card title="Seamless world creation" icon="pencil">
-  Build your worlds in real time  with other people - add in new models, move objects around, and edit materials on the fly!
+    Build your worlds in real time with other people - add in new models, move
+    objects around, and edit materials on the fly!
   </Card>
   <Card title="Cross platform" icon="laptop">
-  UNAVI runs in the web, meaning any device that has a browser can instantly access UNAVI - mobile, desktop, or VR!
+    UNAVI runs in the web, meaning any device that has a browser can instantly
+    access UNAVI - mobile, desktop, or VR!
   </Card>
 </CardGrid>
-
