update landing title

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: UNAVI
+title: Welcome
 description: An open and decentralized web-based social platform
 template: splash
 hero:
+  title: UNAVI
   tagline: An open and decentralized web-based social platform
   image:
     file: ../../assets/block-logo.png
