--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -37,3 +37,5 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
     access UNAVI - mobile, desktop, or VR!
   </Card>
 </CardGrid>
+
+<p class="text-center pt-12 text-zinc-500">:3</p>
