change zinc to gray

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -38,4 +38,4 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
   </Card>
 </CardGrid>
 
-<p class="text-center pt-12 text-zinc-500">:3</p>
+<p class="text-center pt-12 text-gray-500">:3</p>
