--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -19,7 +19,7 @@ hero:
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-<CardGrid stagger>
+<CardGrid>
   <Card title="Open architecture" icon="puzzle">
     Every layer is open for others to build on. Run your own servers, mod your
     client, and extend the protocol to add new features.
