--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: Welcome
-description: An open and decentralized web-based social platform
+description: An open and decentralized web-based social platform.
 template: splash
 hero:
   title: UNAVI
-  tagline: An open and decentralized web-based social platform
+  tagline: An open and decentralized web-based social platform.
   image:
     file: ../../assets/block-logo.png
   actions:
