landing page wording updates

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -29,11 +29,11 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
     created.
   </Card>
   <Card title="Seamless world creation" icon="pencil">
-    Build your worlds in real time with other people - add in new models, move
+    Build your worlds in real time with other people - drop in new models, move
     objects around, and edit materials on the fly!
   </Card>
   <Card title="Cross platform" icon="laptop">
-    UNAVI runs in the web, meaning any device that has a browser can instantly
+    UNAVI has both a native and web client, meaning any device that has a browser can instantly
     access UNAVI - mobile, desktop, or VR!
   </Card>
 </CardGrid>
