get the docs a bit more up to date

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: Welcome
-description: An open and decentralized web-based social platform.
+description: An open source VR social platform.
 template: splash
 hero:
   title: UNAVI
-  tagline: An open and decentralized web-based social platform.
+  tagline: An open source VR social platform.
   image:
     file: ../../assets/block-logo.png
   actions:
@@ -38,4 +38,4 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
   </Card>
 </CardGrid>
 
-<p class="text-center pt-12 text-gray-500">:3</p>
+<p class="text-center pt-16 text-gray-500">:3</p>
