prepare home page for main unavi site

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,17 +1,20 @@
 ---
 title: Welcome
-description: An open source VR social platform.
 template: splash
+editUrl: false
 hero:
-  title: The UNAVI Docs
-  tagline: Welcome to the UNAVI Docs, where you can find comprehensive guides and documentation about the UNAVI ecosystem.
+  title: UNAVI
+  tagline: An open source VR social platform.
   image:
     file: ../../assets/block-logo.png
   actions:
-    - text: Get started
-      link: /overview/welcome/
+    - text: Play now
+      link: https://app.unavi.xyz
       icon: right-arrow
       variant: primary
+    - text: View docs
+      link: /docs/overview/welcome/
+      icon: open-book
 ---
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
@@ -35,4 +38,4 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
   </Card>
 </CardGrid>
 
-<p class="text-center pt-16 -mb-8 text-gray-500">:3</p>
+<p class="text-center pt-24 -mb-12 text-gray-500">:3</p>
