create flake.nix + prettier format

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -25,15 +25,15 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
     client, and extend the protocol to add new features.
   </Card>
   <Card title="VRM avatars" icon="star">
-    Bring your own VRM avatar, or find one from the thousands of existing avatars others have
-    created.
+    Bring your own VRM avatar, or find one from the thousands of existing
+    avatars others have created.
   </Card>
   <Card title="Seamless world creation" icon="pencil">
     Build your worlds in real time with other people - drop in new models, move
     objects around, and edit materials on the fly!
   </Card>
   <Card title="Cross platform" icon="laptop">
-    UNAVI has both a native and web client, meaning any device that has a browser can instantly
-    access UNAVI - mobile, desktop, or VR!
+    UNAVI has both a native and web client, meaning any device that has a
+    browser can instantly access UNAVI - mobile, desktop, or VR!
   </Card>
 </CardGrid>
