simplification, styling, retvrn to docs site

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,13 +3,13 @@ title: Welcome
 template: splash
 editUrl: false
 hero:
-  title: UNAVI
-  tagline: An open-source VR social platform built on The Wired.
+  title: UNAVI Docs
+  tagline: An open-source VR social platform.
   image:
     file: ../../assets/block-logo.png
   actions:
     - text: Get Started
-      link: /docs/overview/welcome/
+      link: /overview/welcome/
       variant: primary
     - text: View on GitHub
       link: https://github.com/unavi-xyz/unavi
@@ -19,19 +19,17 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid>
   <Card title="Open architecture" icon="puzzle">
-    Every layer is open for others to build on. Run your own servers, mod your
-    client, and extend the protocol to add new features.
+    Every layer is open for others to build on. Run your own server, mod your
+    client, or extend the protocol to add new features!
   </Card>
   <Card title="VRM avatars" icon="star">
-    Bring your own VRM avatar, or find one from the thousands of existing
-    avatars others have created.
+    Bring your own VRM avatar, or discover one from the thousands that others have created.
   </Card>
   <Card title="Seamless world creation" icon="pencil">
-    Build your worlds in real time with other people - drop in new models, move
+    Build your worlds live with other players - drop in new models, move
     objects around, and edit materials on the fly!
   </Card>
   <Card title="Cross platform" icon="laptop">
-    UNAVI has both a native and web client, meaning any device that has a
-    browser can instantly access UNAVI - mobile, desktop, or VR!
+    UNAVI has both a native and web client, meaning nearly any device can access UNAVI - VR, desktop, or mobile!
   </Card>
 </CardGrid>
