--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ head:
 template: splash
 editUrl: false
 hero:
-  title: UNAVI Docs
+  title: UNAVI
   tagline: An open-source VR social platform.
   image:
     file: ../../assets/block-logo.png
