--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ template: splash
 editUrl: false
 hero:
   title: UNAVI
-  tagline: An open-source VR social platform.
+  tagline: An open-source 3D social platform with seamless multiplayer spaces, dynamic user content, and self-sovereign identity.
   image:
     file: ../../assets/block-logo.png
   actions:
@@ -28,7 +28,7 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
   <Card title="VRM avatars" icon="star">
     Bring your own VRM avatar, or discover one from the thousands that others have created.
   </Card>
-  <Card title="Seamless world creation" icon="pencil">
+  <Card title="Real-time world creation" icon="pencil">
     Build your worlds live with other players - drop in new models, move
     objects around, and edit materials on the fly!
   </Card>
