--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ template: splash
 editUrl: false
 hero:
   title: UNAVI
-  tagline: An open-source 3D social platform with seamless multiplayer spaces, dynamic user content, and self-sovereign identity.
+  tagline: An open-source VR social platform.
   image:
     file: ../../assets/block-logo.png
   actions:
@@ -21,18 +21,19 @@ hero:
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid>
-  <Card title="Open architecture" icon="puzzle">
-    Every layer is open for others to build on. Run your own server, mod your
+  <Card title="Open Architecture" icon="puzzle">
+    Every layer is open for others to build on - run your own server, mod your
     client, or extend the protocol to add new features!
   </Card>
-  <Card title="VRM avatars" icon="star">
+  <Card title="VRM Avatars" icon="star">
     Bring your own VRM avatar, or discover one from the thousands that others have created.
   </Card>
-  <Card title="Real-time world creation" icon="pencil">
-    Build your worlds live with other players - drop in new models, move
+  <Card title="Seamless World Creation" icon="pencil">
+    Create worlds live with other players - drop in new models, move
     objects around, and edit materials on the fly!
   </Card>
-  <Card title="Cross platform" icon="laptop">
-    UNAVI has both a native and web client, meaning nearly any device can access UNAVI - VR, desktop, or mobile!
+  <Card title="WASM Scripting" icon="rocket">
+    Multiplayer spaces are fueled by a powerful WebAssembly scripting environment,
+    allowing for complex interactions between dynamic user-created objects.
   </Card>
 </CardGrid>
