--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,12 +1,12 @@
 ---
-title: UNAVI Docs
+title: UNAVI
 head:
   - tag: title
     content: UNAVI Docs
 template: splash
 editUrl: false
 hero:
-  title: UNAVI
+  title: UNAVI 
   tagline: An open-source VR social platform.
   image:
     file: ../../assets/block-logo.png
@@ -14,8 +14,9 @@ hero:
     - text: Get Started
       link: /overview/welcome/
       variant: primary
-    - text: View on GitHub
-      link: https://github.com/unavi-xyz/unavi
+    - text: Enter app
+      link: https://app.unavi.xyz
+      icon: right-arrow
 ---
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
