update getting started section + run prettier

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,13 +6,13 @@ head:
 template: splash
 editUrl: false
 hero:
-  title: UNAVI 
+  title: UNAVI
   tagline: An open-source VR social platform.
   image:
     file: ../../assets/block-logo.png
   actions:
     - text: Get Started
-      link: /overview/welcome/
+      link: /getting-started/
       variant: primary
     - text: Enter app
       link: https://app.unavi.xyz
@@ -27,14 +27,16 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
     client, or extend the protocol to add new features!
   </Card>
   <Card title="VRM Avatars" icon="star">
-    Bring your own VRM avatar, or discover one from the thousands that others have created.
+    Bring your own VRM avatar, or discover one from the thousands that others
+    have created.
   </Card>
   <Card title="Seamless World Creation" icon="pencil">
-    Create worlds live with other players - drop in new models, move
-    objects around, and edit materials on the fly!
+    Create worlds live with other players - drop in new models, move objects
+    around, and edit materials on the fly!
   </Card>
   <Card title="WASM Scripting" icon="rocket">
-    Multiplayer spaces are fueled by a powerful WebAssembly scripting environment,
-    allowing for complex interactions between dynamic user-created objects.
+    Multiplayer spaces are fueled by a powerful WebAssembly scripting
+    environment, allowing for complex interactions between dynamic user-created
+    objects.
   </Card>
 </CardGrid>
