--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: UNAVI
+title: UNAVI Docs
 head:
   - tag: title
-    content: UNAVI
+    content: UNAVI Docs
 template: splash
 editUrl: false
 hero:
