remove web app link for now

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -14,8 +14,8 @@ hero:
     - text: Get Started
       link: /getting-started/
       variant: primary
-    - text: Enter app
-      link: https://app.unavi.xyz
+    - text: Download
+      link: https://github.com/unavi-xyz/unavi/releases/latest
       icon: right-arrow
 ---
 
