--- a/src/content/docs/content/scripts.mdx
+++ b/src/content/docs/content/scripts.mdx
@@ -2,11 +2,18 @@
 title: Scripts
 ---
 
+import { Icon } from '@astrojs/starlight/components';
+
+
 UNAVI provides a rich [WebAssembly](https://webassembly.org/) scripting environment, and it is the core feature that makes UNAVI so powerful.
 
 Check out the [scripting guide](/guides/writing-scripts) to learn how to write your own scripts.
 
-## WASM
+
+<h2 class="flex space-x-4">
+  <Icon name="seti:wasm" class="text-[#654FF0]" />
+  <span>WASM</span>
+</h2>
 
 WebAssembly (WASM) scripts can be written in many different languages,
 and the [component model](https://component-model.bytecodealliance.org/) facilitates complex interactions between these scripts.
@@ -16,7 +23,10 @@ These APIs give a script the functionality to load 3D models, receive input from
 Fine-grained access to these APIs can be set for each script and, combined with the strict sandboxing enforced by
 the WebAssembly runtime, allows for the safe running of arbitrary user scripts within the app.
 
-## Nodes
+<h2 class="flex space-x-4">
+  <Icon name="seti:json" class="text-amber-400" />
+  <span>Nodes</span>
+</h2>
 
 A node-based solution for programming behaviors within worlds is planned.
 This will have a much lower barrier to entry compared to writing code, and will work much better within VR.
